--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -249,7 +249,7 @@ footer .btn
 
   // 兼容 android
 
-  history.replaceState(null, null, "/index/index/index?r="+uuid());
+  //history.replaceState(null, null, "/index/index/index?r="+uuid());
 
   // 兼容 ios
 
