--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <div class="form-group">
                         <label for="wechat">绑定微信</label>
-                        <input type="text" name="wechat" value="{if condition='$username'} {$username} {/if}" {if condition="$username"} readonly {/if} class="form-control" id="wechat" required placeholder="注意：微信只能绑定一次">
+                        <input type="text" name="wechat" value="{if condition='$nickname'} {$nickname} {/if}" {if condition="$nickname"} readonly {/if} class="form-control" id="wechat" required placeholder="注意：微信只能绑定一次">
                     </div>
                     <div class="form-group">
                         <label >任何疑问，欢迎咨询</label>
