--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -144,7 +144,7 @@
         {else /}
         <button type="button" class="btn btn-primary" onclick="return getUrl();">马 上 阅 读</button>
         <div class="alert alert-warning text-center" id="alert-status-2" role="alert" style="position: fixed;top: 0;width: 100%;">
-            阅读越多，赚得越多
+            时间要超过5秒，否则无效阅读
         </div>
         {/if}
     </div>
