--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -193,7 +193,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">亲爱的客户</h4>
+                <h4 class="modal-title" id="myModalLabel">我要提现</h4>
             </div>
             <div class="modal-body">
                 <form action="{:url('/index/index/withdraw')}" method="post">
