--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -79,6 +79,7 @@
     .jumbotron2 .container
     {
         padding: 0;
+        width: 100%;
     }
     .jumbotron2 img
     {
@@ -116,7 +117,7 @@
                 <h1><small>会员号 {$user_id}</small></h1>
             </div>
         </div>
-        <div class="col-xs-8 col-sm-4">
+        <div class="col-xs-8 col-sm-8">
             <ul class="list-group">
                 <li class="list-group-item">
                     <span class="badge">{$all_article_count}/次</span>
@@ -207,7 +208,7 @@
                     </div>
                     <div class="form-group">
                         <label >任何疑问，欢迎咨询</label>
-                        <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-sm-12">
                             <div class="checkbox">
                                 <label>
                                     <img src="http://wx3.sinaimg.cn/mw690/0060lm7Tly1fw0ul3carwj30kw0r2abv.jpg" width="100%">
