--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -199,7 +199,7 @@
             <div class="modal-body">
                 <form action="{:url('/index/index/withdraw')}" method="post">
                     <div class="form-group">
-                        <label for="money">提现金额</label>
+                        <label for="money">提现金额(元)</label>
                         <input type="number" name="amount" class="form-control" value="1" min="1" max="10" id="money" required placeholder="整数">
                     </div>
                     <div class="form-group">
