--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -56,8 +56,7 @@
     .list-group-item>.badge
     {
         margin-left: 5px;
-        background: yellow;
-        color: blue;
+        background: #337ab7;
     }
     .jumbotron
     {
