--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -156,7 +156,7 @@
             <div class="alert alert-warning alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
                 <h4><strong>赚钱技巧</strong><span class="glyphicon glyphicon-star-empty" style="float: right;"></span><span style="float: right;" onclick="window.location.href='https://mp.weixin.qq.com/s/oUYlhpMMznaJs4gAzLwHUA';">收藏网址</span><span class="glyphicon glyphicon-star-empty" style="float: right;"></h4>
-                <h6>1.新用户首次注册奖励0.5元</h6>
+                <h6>1.新用户首次注册奖励0.5元；</h6>
                 <h6>2.每一次阅读单价0.03元，满1元即可提现；</h6>
                 <h6>3.阅读时间间隔在5秒及以上，否则视为无效阅读；</h6>
                 <h6>4.进入文章后，可以按微信底部返回按钮返回；</h6>
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">　提　交　</button>
+                    <button type="submit" class="btn btn-primary">　提交申请　</button>
                 </form>
             </div>
         </div>
