--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -6,8 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0" />
-    <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 </head>
 <body>
 
