--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -10,58 +10,44 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 </head>
 <body>
-
 <div class="main_box">
     <div class="my_box mt_20">
-        <div>
-            <div style="float:left:width:79.99%"><h2 style="font-width:bold;font-size:18px; padding-left:40%">
-                翡翠台        </h2>
-            </div>
-        </div>
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
-                    <video  src="http://live.xiaochai.club/wintv/922bbe495a87497da1c0a461dd1bbcde.m3u8" width="100%" height="250" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
+                    <video  src="http://live.xiaochai.club/wintv/922bbe495a87497da1c0a461dd1bbcde.m3u8" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
                 </div>
             </div>
 
             <ul class="abc">
-                <li class="ml"><a href="/news/view/id/3346" style="color:#fff">上一个</a></li>
+                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">上一个</a></li>
                 <li class="mcen">请点击上面<img src="http://wx.ottcom.cn/Public/start.png" style="width:14px;margin:0 2px" />按钮播放</li>
-                <li class="mr"><a href="/news/view/id/3574" style="color:#fff">下一个</a></li>
+                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">下一个</a></li>
             </ul>
             <div class="gunad">
                 <marquee scrollamount="3">请点下网址&quot;收藏&quot;或-点右上角&quot;在聊天置顶或◎浮窗&quot;可置顶快捷看视频</marquee>
             </div>
             <div class="pindao">
                 <ul id="mlist">
-                    <li class="item"><a href="/news/view/id/3479"  >﻿603台</a></li><li class="item"><a href="/news/view/id/3340"  >18台</a></li><li class="item"><a href="/news/view/id/3341"  >J2台</a></li><li class="item"><a href="/news/view/id/3476"  >603台(备用)</a></li><li class="item"><a href="/news/view/id/3343"  >18台(备用)</a></li><li class="item"><a href="/news/view/id/3344"  >J2台(备用)</a></li><li class="item"><a href="/news/view/id/3345"  >有线新闻台</a></li><li class="item"><a href="/news/view/id/3346"  >无线新闻台</a></li><li class="item"><a href="/news/view/id/3347"  style="color:#ff0000">翡翠台</a></li><li class="item"><a href="/news/view/id/3574"  >翡翠台2</a></li><li class="item"><a href="/news/view/id/3348"  >WinTV粤语电影</a></li><li class="item"><a href="/news/view/id/3498"  >粤语电影1</a></li><li class="item"><a href="/news/view/id/3350"  >粤语电影</a></li><li class="item"><a href="/news/view/id/3509"  >美亚电影台</a></li><li class="item"><a href="/news/view/id/3567"  >珠江电影</a></li><li class="item"><a href="/news/view/id/3351"  >TVB无线功夫台</a></li><li class="item"><a href="/news/view/id/3352"  >TVB星河（粤语）</a></li><li class="item"><a href="/news/view/id/3353"  >澳门卫视(赛马)</a></li><li class="item"><a href="/news/view/id/3354"  >澳门卫视(赛马)2</a></li><li class="item"><a href="/news/view/id/3355"  >明珠台</a></li><li class="item"><a href="/news/view/id/3356"  >无线财经台</a></li><li class="item"><a href="/news/view/id/3357"  >奇妙电视台</a></li><li class="item"><a href="/news/view/id/3358"  >VIU</a></li><li class="item"><a href="/news/view/id/3578"  >新视觉</a></li><li class="item"><a href="/news/view/id/3359"  >足球台（新视觉英超)</a></li><li class="item"><a href="/news/view/id/3360"  >广东体育频道</a></li><li class="item"><a href="/news/view/id/3361"  >球彩台</a></li><li class="item"><a href="/news/view/id/3497"  >有线体育2台</a></li><li class="item"><a href="/news/view/id/3484"  > 高尔夫　</a></li><li class="item"><a href="/news/view/id/3485"  > 高尔夫.网球</a></li><li class="item"><a href="/news/view/id/3362"  >CCTV-5</a></li><li class="item"><a href="/news/view/id/3483"  >CCTV 5+</a></li><li class="item"><a href="/news/view/id/3363"  >CCTV-13</a></li><li class="item"><a href="/news/view/id/3366"  >NOW TV</a></li><li class="item"><a href="/news/view/id/3530"  >艺华高清探索	</a></li><li class="item"><a href="/news/view/id/3519"  >天华综艺高清</a></li><li class="item"><a href="/news/view/id/3486"  >艺华高清探索</a></li><li class="item"><a href="/news/view/id/3494"  >凤凰卫视香港</a></li><li class="item"><a href="/news/view/id/3488"  >凤凰资讯</a></li><li class="item"><a href="/news/view/id/3489"  >凤凰中文</a></li><li class="item"><a href="/news/view/id/3570"  >探索高清</a></li><li class="item"><a href="/news/view/id/3490"  >Discovery.</a></li><li class="item"><a href="/news/view/id/3560"  >Discovery科学</a></li><li class="item"><a href="/news/view/id/3491"  > 动物星球</a></li><li class="item"><a href="/news/view/id/3579"  >广东珠江频道</a></li><li class="item"><a href="/news/view/id/3580"  >广东新闻</a></li><li class="item"><a href="/news/view/id/3581"  >广东公共</a></li><li class="item"><a href="/news/view/id/3582"  >广东影视</a></li><li class="item"><a href="/news/view/id/3583"  >南方经济TVS1</a></li><li class="item"><a href="/news/view/id/3584"  >南方卫视TVS2</a></li><li class="item"><a href="/news/view/id/3556"  >東森财經新聞</a></li><li class="item"><a href="/news/view/id/3536"  >高点综合</a></li><li class="item"><a href="/news/view/id/3539"  >寰宇二台</a></li><li class="item"><a href="/news/view/id/3492"  >寰宇新闻</a></li><li class="item"><a href="/news/view/id/3521"  >非凡新闻</a></li><li class="item"><a href="/news/view/id/3542"  >民视新闻台</a></li><li class="item"><a href="/news/view/id/3543"  >民視第一台</a></li><li class="item"><a href="/news/view/id/3544"  >民視台湾台</a></li><li class="item"><a href="/news/view/id/3563"  >东森超视</a></li><li class="item"><a href="/news/view/id/3493"  >东森新闻</a></li><li class="item"><a href="/news/view/id/3531"  >东森亚洲</a></li><li class="item"><a href="/news/view/id/3522"  >三立新闻</a></li><li class="item"><a href="/news/view/id/3540"  >三立台湾</a></li><li class="item"><a href="/news/view/id/3546"  >公视三台</a></li><li class="item"><a href="/news/view/id/3524"  >八大娱乐</a></li><li class="item"><a href="/news/view/id/3528"  >八大综合</a></li><li class="item"><a href="/news/view/id/3538"  >八大戏剧</a></li><li class="item"><a href="/news/view/id/3559"  >八大第1台</a></li><li class="item"><a href="/news/view/id/3495"  >中天亚洲</a></li><li class="item"><a href="/news/view/id/3537"  >中天综合</a></li><li class="item"><a href="/news/view/id/3518"  >中天新闻</a></li><li class="item"><a href="/news/view/id/3558"  >中天娱樂台</a></li><li class="item"><a href="/news/view/id/3569"  >公视三台</a></li><li class="item"><a href="/news/view/id/3545"  >台視新聞</a></li><li class="item"><a href="/news/view/id/3547"  >台视财经台</a></li><li class="item"><a href="/news/view/id/3550"  >博斯運动2</a></li><li class="item"><a href="/news/view/id/3549"  >博斯高球1</a></li><li class="item"><a href="/news/view/id/3548"  >博斯無限</a></li><li class="item"><a href="/news/view/id/3392"  >香港卫视</a></li><li class="item"><a href="/news/view/id/3535"  >Fashion TV</a></li><li class="item"><a href="/news/view/id/3534"  >亚洲美食频道</a></li><li class="item"><a href="/news/view/id/3533"  >TLC旅遊生活频道</a></li><li class="item"><a href="/news/view/id/3393"  >新华社中文</a></li><li class="item"><a href="/news/view/id/3394"  >澳門體育</a></li><li class="item"><a href="/news/view/id/3532"  >中国电视</a></li><li class="item"><a href="/news/view/id/3395"  >澳門資訊</a></li><li class="item"><a href="/news/view/id/3396"  >澳視澳門</a></li><li class="item"><a href="/news/view/id/3564"  >Z频道</a></li><li class="item"><a href="/news/view/id/3565"  >ELEVEN 1</a></li><li class="item"><a href="/news/view/id/3566"  >ELEVEN 2</a></li><li class="item"><a href="/news/view/id/3520"  >东森幼幼</a></li><li class="item"><a href="/news/view/id/3526"  >东森戏剧</a></li><li class="item"><a href="/news/view/id/3527"  >东森洋片</a></li><li class="item"><a href="/news/view/id/3523"  >东森电影</a></li><li class="item"><a href="/news/view/id/3525"  >天映频道</a></li><li class="item"><a href="/news/view/id/3541"  >龙华电影</a></li><li class="item"><a href="/news/view/id/3529"  >龙祥时代电影</a></li><li class="item"><a href="/news/view/id/3551"  >龍華偶像</a></li><li class="item"><a href="/news/view/id/3552"  >龍華戲劇</a></li><li class="item"><a href="/news/view/id/3553"  >龍華洋片</a></li><li class="item"><a href="/news/view/id/3554"  >靖天映畫</a></li><li class="item"><a href="/news/view/id/3555"  >靖天日本台</a></li><li class="item"><a href="/news/view/id/3557"  >迪士尼卡通</a></li><li class="item"><a href="/news/view/id/3561"  >華纳TV</a></li><li class="item"><a href="/news/view/id/3562"  >好萊塢電影台</a></li><li class="item"><a href="/news/view/id/3568"  >CHC高清电影</a></li><li class="item"><a href="/news/view/id/3573"  >中国电影香港</a></li><li class="item"><a href="/news/view/id/3398"  >斯坦森电影</a></li><li class="item"><a href="/news/view/id/3399"  >徐峥电影</a></li><li class="item"><a href="/news/view/id/3400"  >周润发电影</a></li><li class="item"><a href="/news/view/id/3401"  >李连杰电影</a></li><li class="item"><a href="/news/view/id/3402"  >洪金宝电影</a></li><li class="item"><a href="/news/view/id/3403"  >古天乐电影</a></li><li class="item"><a href="/news/view/id/3405"  >甄子丹</a></li><li class="item"><a href="/news/view/id/3404"  >真实改编</a></li><li class="item"><a href="/news/view/id/3406"  >林正英</a></li><li class="item"><a href="/news/view/id/3407"  >刘德华</a></li><li class="item"><a href="/news/view/id/3408"  >周星驰</a></li><li class="item"><a href="/news/view/id/3409"  >成龙</a></li><li class="item"><a href="/news/view/id/3410"  >李连杰</a></li><li class="item"><a href="/news/view/id/3411"  >徐克导演</a></li><li class="item"><a href="/news/view/id/3412"  >王晶导演</a></li><li class="item"><a href="/news/view/id/3413"  >香港电影</a></li><li class="item"><a href="/news/view/id/3414"  >赌博电影</a></li><li class="item"><a href="/news/view/id/3415"  >漫威电影</a></li><li class="item"><a href="/news/view/id/3416"  >女神电影</a></li><li class="item"><a href="/news/view/id/3417"  >怪物电影</a></li><li class="item"><a href="/news/view/id/3418"  >丧尸电影</a></li><li class="item"><a href="/news/view/id/3419"  >战争电影</a></li><li class="item"><a href="/news/view/id/3420"  >犯罪悬疑</a></li><li class="item"><a href="/news/view/id/3421"  >古惑仔电影</a></li><li class="item"><a href="/news/view/id/3422"  >好菜坞电影</a></li><li class="item"><a href="/news/view/id/3423"  >灾难电影</a></li><li class="item"><a href="/news/view/id/3424"  >惊悚电影</a></li><li class="item"><a href="/news/view/id/3425"  >复仇犯罪</a></li><li class="item"><a href="/news/view/id/3426"  >赌神</a></li><li class="item"><a href="/news/view/id/3428"  >陈翔六点半</a></li><li class="item"><a href="/news/view/id/3429"  >战旗电影51</a></li><li class="item"><a href="/news/view/id/3430"  >战旗电影52</a></li><li class="item"><a href="/news/view/id/3431"  >战旗电影67</a></li><li class="item"><a href="/news/view/id/3432"  >战旗电影69</a></li><li class="item"><a href="/news/view/id/3433"  >五福星系列</a></li><li class="item"><a href="/news/view/id/3434"  >搞笑港片</a></li><li class="item"><a href="/news/view/id/3435"  >超级英雄</a></li><li class="item"><a href="/news/view/id/3436"  >女神系列2</a></li><li class="item"><a href="/news/view/id/3437"  >黑帮大片</a></li><li class="item"><a href="/news/view/id/3438"  >速度与激情</a></li><li class="item"><a href="/news/view/id/3439"  >重案六组</a></li><li class="item"><a href="/news/view/id/3440"  >高清1</a></li><li class="item"><a href="/news/view/id/3441"  >高清2</a></li><li class="item"><a href="/news/view/id/3442"  >高清3</a></li><li class="item"><a href="/news/view/id/3443"  >高清4</a></li><li class="item"><a href="/news/view/id/3444"  >明星大片</a></li><li class="item"><a href="/news/view/id/3445"  >动作电影</a></li><li class="item"><a href="/news/view/id/3446"  >精品电影</a></li><li class="item"><a href="/news/view/id/3447"  >熊猫电影4</a></li><li class="item"><a href="/news/view/id/3451"  >熊猫电影8</a></li><li class="item"><a href="/news/view/id/3454"  >高清电影3</a></li><li class="item"><a href="/news/view/id/3463"  >高清电影13</a></li><li class="item"><a href="/news/view/id/3464"  >高清电影14</a></li><li class="item"><a href="/news/view/id/3466"  >高清电影16</a></li><li class="item"><a href="/news/view/id/3467"  >高清电影17</a></li><li class="item"><a href="/news/view/id/3468"  >高清电影18</a></li><li class="item"><a href="/news/view/id/3469"  >高清电影20</a></li><li class="item"><a href="/news/view/id/3470"  >高清电影21</a></li><li class="item"><a href="/news/view/id/3471"  >高清电影22</a></li><li class="item"><a href="/news/view/id/3472"  >高清电影23</a></li><li class="item"><a href="/news/view/id/3473"  >高清电影24</a></li><li class="item"><a href="/news/view/id/3507"  >新喜剧之王</a></li><li class="item"><a href="/news/view/id/3512"  >神探蒲松龄高清版成龙</a></li><li class="item"><a href="/news/view/id/3513"  >廉政风云</a></li><li class="item"><a href="/news/view/id/3515"  >家和万事惊 </a></li><li class="item"><a href="/news/view/id/3514"  >流浪地球</a></li><li class="item"><a href="/news/view/id/3516"  >生人勿近之邪花粤语</a></li><li class="item"><a href="/news/view/id/3577"  >测试</a></li>                </ul>
+                    {foreach $video_list as $key=>$vo}
+                    <li class="item"><a href="/?video_id={$key}" {if condition="$current_id eq $key"}style="color:red;font-weight:bold;font-size:1.5em;"{/if}>{$vo['name']}</a></li>
+                    {/foreach}
+                </ul>
             </div>
-
-
         </div>
-
     </div>
-
     <div class="footer">
-
         <div class="fleft">
-
-            敬告：直播资源来自网络，如有抵触，请联系删除！★注★安卓手机延时2秒，IPHONE延时15秒★ 敬告：珍惜生命，请远离赌博！手机包年500元，请扫码联系！！！
+            <p>敬告：直播资源来自网络，如有侵权，请联系删除！★注★安卓手机延时2秒，IPHONE延时15秒★ </p>
+            <p>敬告：珍惜生命，请远离赌博！</p>
+            <p style="text-align: center;color: red">※※※【开通会员，扫码微信联系客服】※※※</p>
+            <p style="text-align: center;">
+                <img src="/assets/img/weixin.jpg">
+            </p>
         </div>
-
         <div class="fright">
-
-            <!--
-                      <img src="9999"/> -->
-
         </div>
-
     </div>
-
-
-
 </div>
 </body>
-
 </html>
