--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -381,163 +381,83 @@ body {
 }
 
 .art_list dl dd{
-
     width: 25%;
-
     float: right;
-
     margin-right:10px;
-
     height:3em;
-
     line-height: 3em;
-
 }
 
 .art_list dl dt{
-
     width: 70%;
-
     float:left;
-
     height:3em;
-
     line-height: 3em;
-
     margin-left:0.4em;
-
 }
 
-
-
 .footer{
-
-    background-color: #f4c681;
-
-    margin-top:0.5em;
-
+    background-color: #333;
     color:#fff;
-
     overflow: hidden;
-
-
-
 }
 
 .footer .fleft{
-
-    padding:2em ;
-
+    padding:1em ;
     float: left;
-
 }
-
-.footer .fright{
-
-    padding-top:1em;
-
-    padding-right:3em;
-
-    float: right;
-
-    width:20%;
-
-}
-
-
-
-
-
-
 
 .mymenu{
-
     border:1px solid #8f8d8d;
-
     border-radius: 5px;
-
     float:right;
-
     margin:0 10px 0 0;
-
     overflow:hidden;
-
     clear:both;
-
     position:absolute;
-
     top:50px;
-
     right:0;
-
     width:40%;
-
     background:#c4b860;
-
     z-index:100;
-
 }
 
 .mymenu ul{
-
     padding:0;
-
 }
 
 .mymenu ul li{
-
     color:#fff;
-
     height:2.2em;
-
     line-height: 2.2em;
-
     border-bottom:1px solid #b9b06f;
-
     padding-left:3em;
-
     font-weight: bold;
-
 }
 
 .mymenu .home{
-
     background:url('../images/m_home.png') no-repeat 0.4em center;
-
     background-size:18%;
-
 }
 
 .mymenu .about{
-
     background:url('../images/m_about.png') no-repeat 0.4em center;
-
     background-size:18%;
-
 }
 
 .mymenu .pro{
-
     background:url('../images/m_pro.png') no-repeat 0.4em center;
-
     background-size:18%;
-
 }
 
 .mymenu .jidi{
-
     background:url('../images/m_jd.png') no-repeat 0.4em center;
-
     background-size:18%;
-
 }
 
 .mymenu .news{
-
     background:url('../images/m_new.png') no-repeat 0.4em center;
-
     background-size:18%;
-
 }
 
 .mymenu .tel{
@@ -548,32 +468,15 @@ body {
 
 }
 
-
-
 .my_box{
-
-
-
-    margin-top:0.5em;
-
     background-color: #fff;
-
-    padding:0.5em 0 1em;
-
     overflow: hidden;
-
 }
 
-
-
 .my_box .expert_box{
-
     width:50%;
-
     float: left;
-
     margin-top:1.5em;
-
 }
 
 .my_box img{
@@ -585,253 +488,122 @@ body {
 }
 
 .expert_box .expert_img{
-
     width:80%;
-
     margin:0 auto;
-
 }
 
 .expert_img img{display: block;}
 
 .expert_box .expert_til{
-
     width:80%;
-
     margin:0 auto;
-
     text-align:center;
-
     height:2.5em;
-
     line-height:2.5em;
-
     background-color: #d5d4d4
-
 }
-
-
 
 .my_box .page{
-
     overflow: hidden;
-
     width:100%;
-
     text-align: center;
-
     padding-top:1em;
-
-
-
 }
 
-
-
 .mt_30{
-
     margin-top: 1em
-
 }
 
 .my_box .common_h2{
-
     text-align: center;
-
-
-
-
-
-}
-
-.my_box .about_box{
-
-
-
-}
-
-.my_box .txt{
-
-    padding:0.5em 1em;
-
-
-
 }
 
 .about_box .pic{
-
     text-align: center;
-
 }
 
 .pic img{
-
     width:80%;
-
-
-
 }
 
 .about_box .news_date_box{
-
     color:#a6a6a6;
-
     text-align: center;
-
-}
-
-
-
-.about_box .news_list{
-
-
-
 }
 
 .news_list dl{
-
     overflow: hidden;
-
     margin-top:0.2em;
-
     border-bottom: 1px solid #484848;
-
 }
 
 .news_list dl dd{
-
     width: 25%;
-
     float: right;
-
     margin-right:5px;
-
     height:3em;
-
     line-height: 3em;
-
 }
 
 .news_list dl dt{
-
     width: 65%;
-
     float:left;
-
     height:3em;
-
     line-height: 3em;
-
     margin-left:0.6em;
-
-}
-
-.about_box .news_list2{
-
-
-
 }
 .news_list2 dl{
-
     overflow: hidden;
-
     margin-top:0.2em;
-
     border-bottom: 1px solid #484848;
-
 }
 
 .news_list2 dl dd{
-
     width: 25%;
-
     float: right;
-
     margin-right:5px;
-
     height:3em;
-
     line-height: 3em;
-
 }
 
 .news_list2 dl dt{
-
     width: 65%;
-
-    /* 	float:left; */
-
     height:3em;
-
     line-height: 3em;
-
     margin-left:0.6em;
-
 }
-
-
 
 .mylogin{
-
-
-
     width:100%;
-
     margin:0 auto;
-
     overflow: hidden;
-
 }
 
-
-
 .mylogin ul{
-
     list-style: none;
-
     padding: 0;
-
     margin: 0;
-
 }
 
 .mylogin ul li{
-
     margin:0;
-
     padding:4px 0 0 0;
-
     list-style: none;
-
     width:100%;
-
     text-align: center;
-
 }
 
 
 
 .mylogin input[type="text"], .mylogin input[type="password"]{
-
     font-size: 15px;
-
     height: auto;
-
     margin-bottom: 10px;
-
     padding: 7px 9px;
-
     width: 90%;
-
     border-radius: 5px;
-
     border: 1px solid #999;
-
 }
-
-
-
-
 
 .btn{
 
@@ -917,7 +689,7 @@ body {
 .abc{
     margin-top:5px;
     overflow: hidden;
-    background-color: #ef8203;
+    background-color: #333;
     padding:5px 0;
     color:#fff;
 }
@@ -933,26 +705,27 @@ body {
     vertical-align: middle;
 }
 .ml{
-
     width:15%;
-
 }
 .mr{
-
     width:15%;
-
 }
 .pindao{
     widows: 100%;
     overflow: hidden;
-
 }
-.pindao li{ float: left; width:33.33%;
-    text-align: center;border-bottom:1px solid #333;
-    overflow: hidden;height: 40px;line-height: 40px;
+.pindao li{
+    float: left;
+    width:33.33%;
+    text-align: center;
+    overflow: hidden;
+    height: 60px;
+    line-height: 60px;
 }
 .gunad{
     height: 30px;line-height: 30px;
     color:red; font-size: 15px;
-    background-color:#d1d1d1;
+}
+a{
+    font-size: 1.2em;
 }
