--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -15,7 +15,7 @@
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
-                    <video  src="http://live.xiaochai.club/wintv/922bbe495a87497da1c0a461dd1bbcde.m3u8" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
+                    <video  src="http://c01.live.aliyuncdn.sharkselection.com/live/d077e13347eb4f58ab8c780b1bbd6cca.m3u8" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
                 </div>
             </div>
 
