--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -15,7 +15,7 @@
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
-                    <video  src="http://c01.live.aliyuncdn.sharkselection.com/live/d077e13347eb4f58ab8c780b1bbd6cca.m3u8" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
+                    <video  src="{$current_video_url}" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
                 </div>
             </div>
 
@@ -30,7 +30,7 @@
             <div class="pindao">
                 <ul id="mlist">
                     {foreach $video_list as $key=>$vo}
-                    <li class="item"><a href="/?video_id={$key}" {if condition="$current_id eq $key"}style="color:red;font-weight:bold;font-size:1.5em;"{/if}>{$vo['name']}</a></li>
+                    <li class="item"><a href="/?video_id={$vo.id}" {if condition="$current_id eq $vo.id"}style="color:red;font-weight:bold;font-size:1.5em;"{/if}>{$vo.name}</a></li>
                     {/foreach}
                 </ul>
             </div>
