--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -20,9 +20,9 @@
             </div>
 
             <ul class="abc">
-                <li class="ml"><a href="/video_id/{$last_video_id}" style="color:#fff">上一个</a></li>
+                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">上一个</a></li>
                 <li class="mcen">请点击上面<img src="http://wx.ottcom.cn/Public/start.png" style="width:14px;margin:0 2px" />按钮播放</li>
-                <li class="mr"><a href="/video_id/{$next_video_id}" style="color:#fff">下一个</a></li>
+                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">下一个</a></li>
             </ul>
             <div class="gunad">
                 <marquee scrollamount="3">请点下网址&quot;收藏&quot;或-点右上角&quot;在聊天置顶或◎浮窗&quot;可置顶快捷看视频</marquee>
@@ -30,7 +30,7 @@
             <div class="pindao">
                 <ul id="mlist">
                     {foreach $video_list as $key=>$vo}
-                    <li class="item"><a href="/video_id/{$vo.id}" {if condition="$current_id eq $vo.id"}style="color:red;font-weight:bold;font-size:1.5em;"{/if}>{$vo.name}</a></li>
+                    <li class="item"><a href="/?video_id={$vo.id}" {if condition="$current_id eq $vo.id"}style="color:red;font-weight:bold;font-size:1.5em;"{/if}>{$vo.name}</a></li>
                     {/foreach}
                 </ul>
             </div>
