--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -15,7 +15,7 @@
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
-                    <video  src="{$current_video_url}" width="100%" height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" preload="auto"></video>
+                    <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="/assets/img/video_bg.jpg" preload="auto"></video>
                 </div>
             </div>
 
