--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 <div class="main_box">
+    {if condition = "empty($current_video_url)"}
+    <legend>体验期已过，请联系客服微信：shan47636</legend>
+    {/if}
     <div class="my_box mt_20">
         <div class="about_box">
             <div class="txt">
