--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="main_box">
     {if condition = "empty($current_video_url)"}
-    <legend style="height: 40px;line-height: 40px;font-size: 1.2em;background: red;color:white;text-align: center;width: 100%">体验期已过，请联系客服微信：shan47636</legend>
+    <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
     {/if}
     <div class="my_box mt_20">
         <div class="about_box">
