--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>直播港澳台</title>
+    <title>港澳台直播节目随意看</title>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -15,6 +15,7 @@
     <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
     {/if}
     <div class="my_box mt_20">
+        <h1 style="width: 100%;height: 30px;text-align: center;font-weight: bold;font-size: 1.3em;background: #333;color: #fff">{$current_video_name}</h1>
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
