--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -14,8 +14,8 @@
     {if condition = "empty($current_video_url)"}
     <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
     {/if}
-    <div class="my_box mt_20">
-        <h1 style="width: 100%;height: 40px;line-height:40px;font-weight: bold;font-size: 1.1em;text-align:center;background: #333;color: #fff">❤❤❤{$current_video_name}❤❤❤</h1>
+    <di<!--v class="my_box mt_20">
+        <h1 style="width: 100%;height: 40px;line-height:40px;font-weight: bold;font-size: 1.1em;text-align:center;background: #333;color: red">❤❤❤{$current_video_name}❤❤❤</h1>-->
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
@@ -53,5 +53,14 @@
         </div>
     </div>
 </div>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?ddbe0601f12bf5f6d7316e8f6b6e2353";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </body>
 </html>
