--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>港澳台直播节目随意看</title>
+    <title>港澳台视频直播在线观看</title>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
