--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,7 +24,7 @@
 
             <ul class="abc">
                 <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">上一个</a></li>
-                <li class="mcen">请点击上面<img src="http://wx.ottcom.cn/Public/start.png" style="width:14px;margin:0 2px" />按钮播放</li>
+                <li class="mcen">请点击上面<img src="/assets/img/right.png" style="width:14px;margin:0 2px" />按钮播放</li>
                 <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">下一个</a></li>
             </ul>
             <div class="gunad">
