--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -14,6 +14,10 @@
     <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
     {/if}
     <div class="my_box mt_20">
+        <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: #fff;font-size: 1.1em;">
+            <div>ID:10001</div>
+            <div style="float: right">恭喜你成为本站第位用户</div>
+        </header>
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
