--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -14,9 +14,8 @@
     <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
     {/if}
     <div class="my_box mt_20">
-        <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: #fff;font-size: 1.1em;">
-            <div>ID:10001</div>
-            <div style="float: right">恭喜你成为本站第位用户</div>
+        <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: #fff;text-align: center;">
+            恭喜你成为本站第{$user_id}位用户, 我的ID:{$user_id}
         </header>
         <div class="about_box">
             <div class="txt">
@@ -25,9 +24,9 @@
                 </div>
             </div>
             <ul class="abc">
-                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">上一个</a></li>
+                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">转上台</a></li>
                 <li class="mcen">请点击上面<img src="/assets/img/right.png" style="width:14px;margin:0 2px" />按钮播放</li>
-                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">下一个</a></li>
+                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">转下台</a></li>
             </ul>
             <div class="gunad">
                 <marquee scrollamount="3">请点下网址&quot;收藏&quot;或-点右上角&quot;在聊天置顶或◎浮窗&quot;可置顶快捷看视频</marquee>
