--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,9 +24,9 @@
                 </div>
             </div>
             <ul class="abc">
-                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">转上台</a></li>
+                <li class="ml"><a href="/?video_id={$last_video_id}" style="color:#fff">转上台↑</a></li>
                 <li class="mcen">请点击上面<img src="/assets/img/right.png" style="width:14px;margin:0 2px" />按钮播放</li>
-                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">转下台</a></li>
+                <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">转下台↓</a></li>
             </ul>
             <div class="gunad">
                 <marquee scrollamount="3">请点下网址&quot;收藏&quot;或-点右上角&quot;在聊天置顶或◎浮窗&quot;可置顶快捷看视频</marquee>
