--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="main_box">
     {if condition = "empty($current_video_url)"}
-    <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，如想继续收看，请加微信：shan47636</legend>
+    <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，请添加微信：shan47636</legend>
     {/if}
     <div class="my_box mt_20">
         <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: red;text-align: center;">
