--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -12,11 +12,12 @@
 <div class="main_box">
     {if condition = "empty($current_video_url)"}
     <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">体验期已过，请添加微信：shan47636</legend>
+    {/else}
+    <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: red;text-align: center;">
+        恭喜你成为本站第{$user_id}位用户
+    </header>
     {/if}
     <div class="my_box mt_20">
-        <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: red;text-align: center;">
-            恭喜你成为本站第{$user_id}位用户
-        </header>
         <div class="about_box">
             <div class="txt">
                 <div id="a1">
