--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -20,7 +20,7 @@
     <div class="my_box mt_20">
         <div class="about_box">
             <div class="txt">
-                <div id="a1">
+                <div>
                     <video  src="{$current_video_url}" width="100%"  autoplay height="300px" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" preload="auto"></video>
                 </div>
             </div>
