--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="main_box">
     {if condition = "empty($current_video_url)"}
-    <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">尊敬的{$username}用户，您的观看体验期已过，如继续收看，请添加客服微信：shan47636，开通会员即可.</legend>
+    <legend style="height: 40px;line-height: 40px;font-size: 1em;background: red;color:white;text-align: center;width: 100%">尊敬的{$username}用户，您的观看体验期已过，如继续收看，如需开通会员请添加客服微信：shan47636</legend>
     {else /}
     <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: red;text-align: center;">
         恭喜你成为本站第{$user_id}位用户
