--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -14,7 +14,7 @@
     <legend style="padding:1%;line-height: 30px;font-size: 1.5em;background: red;color:white;text-align: center;width: 98%">尊敬的{$username}用户，您的观看体验期已过，如继续收看，如需开通会员请添加客服微信：shan47636</legend>
     {else /}
     <header style="height: 30px;line-height: 30px;width: 100%;background: #000;color: red;text-align: center;">
-        (๑•̀ㅂ•́)و✧恭喜你成为本站第{$user_id}位用户(๑•̀ㅂ•́)و✧
+        ☆恭喜你成为本站第{$user_id}位会员☆
     </header>
     {/if}
     <div class="my_box mt_20">
