--- a/application/admin/view/user/user/edit.html
+++ b/application/admin/view/user/user/edit.html
@@ -12,13 +12,13 @@
             <input id="c-username" data-rule="required" class="form-control" name="row[username]" type="text" value="{$row.username}">
         </div>
     </div>
-    <div class="form-group">
+   <!-- <div class="form-group">
         <label for="c-nickname" class="control-label col-xs-12 col-sm-2">{:__('Nickname')}:</label>
         <div class="col-xs-12 col-sm-4">
-            <input id="c-nickname" data-rule="required" class="form-control" name="row[nickname]" type="text" value="{$row.nickname}">
+            <input id="c-nickname" data-rule="" class="form-control" name="row[nickname]" type="text" value="{$row.nickname}">
         </div>
-    </div>
-    <div class="form-group">
+    </div>-->
+   <!-- <div class="form-group">
         <label for="c-password" class="control-label col-xs-12 col-sm-2">{:__('Password')}:</label>
         <div class="col-xs-12 col-sm-4">
             <input id="c-password" data-rule="" class="form-control" name="row[password]" type="text" value="" placeholder="{:__('Leave password blank if dont want to change')}" autocomplete="new-password" />
@@ -49,38 +49,40 @@
             </div>
             <ul class="row list-inline plupload-preview" id="p-avatar"></ul>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="c-level" class="control-label col-xs-12 col-sm-2">{:__('Level')}:</label>
+    </div>-->
+   <!-- <div class="form-group">
+        <label for="c-level" class="control-label col-xs-12 col-sm-2">{:__('是否')}:</label>
         <div class="col-xs-12 col-sm-4">
             <input id="c-level" data-rule="required" class="form-control" name="row[level]" type="number" value="{$row.level}">
         </div>
-    </div>
+    </div>-->
     <div class="form-group">
-        <label for="c-gender" class="control-label col-xs-12 col-sm-2">{:__('Gender')}:</label>
+        <label for="c-gender" class="control-label col-xs-12 col-sm-2">{:__('设置会员')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[gender]', ['1'=>__('Male'), '0'=>__('Female')], $row['gender'])}
+            {:build_radios('row[gender]', ['1'=>__('是'), '0'=>__('否')], $row['gender'])}
         </div>
     </div>
-    <div class="form-group">
-        <label for="c-birthday" class="control-label col-xs-12 col-sm-2">{:__('Birthday')}:</label>
+
+   <!-- <div class="form-group">
+        <label for="c-score" class="control-label col-xs-12 col-sm-2">{:__('会员月数')}:</label>
+        <div class="col-xs-12 col-sm-4">
+            <input id="c-score" data-rule="required" class="form-control" name="row[score]" type="number" value="{$row.score}">
+        </div>
+    </div>-->
+   <div class="form-group">
+        <label for="c-birthday" class="control-label col-xs-12 col-sm-2">{:__('会员到期日')}:</label>
         <div class="col-xs-12 col-sm-4">
             <input id="c-birthday" data-rule="" class="form-control datetimepicker" data-date-format="YYYY-MM-DD" data-use-current="true" name="row[birthday]" type="text" value="{$row.birthday}">
         </div>
     </div>
-    <div class="form-group">
-        <label for="c-bio" class="control-label col-xs-12 col-sm-2">{:__('Bio')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-bio" data-rule="" class="form-control" name="row[bio]" type="text" value="{$row.bio}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-score" class="control-label col-xs-12 col-sm-2">{:__('Score')}:</label>
-        <div class="col-xs-12 col-sm-4">
-            <input id="c-score" data-rule="required" class="form-control" name="row[score]" type="number" value="{$row.score}">
-        </div>
-    </div>
-    <div class="form-group">
+    <!--<div class="form-group">
+       <label for="c-bio" class="control-label col-xs-12 col-sm-2">{:__('Bio')}:</label>
+       <div class="col-xs-12 col-sm-8">
+           <input id="c-bio" data-rule="" class="form-control" name="row[bio]" type="text" value="{$row.bio}">
+       </div>
+   </div>-->
+
+  <!--  <div class="form-group">
         <label for="c-successions" class="control-label col-xs-12 col-sm-2">{:__('Successions')}:</label>
         <div class="col-xs-12 col-sm-4">
             <input id="c-successions" data-rule="required" class="form-control" name="row[successions]" type="number" value="{$row.successions}">
@@ -127,7 +129,7 @@
         <div class="col-xs-12 col-sm-4">
             <input id="c-jointime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[jointime]" type="text" value="{$row.jointime|datetime}">
         </div>
-    </div>
+    </div>-->
     <div class="form-group">
         <label for="content" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
