--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -47,7 +47,7 @@
             <p>敬告：珍惜生命，请远离赌博！</p>
             <p style="text-align: center;color: red">※※※【开通会员，扫码微信联系客服】※※※</p>
             <p style="text-align: center;">
-                <img src="/assets/img/weixin.jpg">
+                <img src="/assets/img/weixin.jpg" width="100%">
             </p>
         </div>
         <div class="fright">
