--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -43,8 +43,8 @@
     </div>
     <div class="footer">
         <div class="fleft">
-            <p>★温馨提示：直播资源全部来源于网络，如有侵权，请联系删除！★ </p>
-            <p>★严重敬告：珍惜生命，请远离黄赌毒！★</p>
+            <p>温馨提示：直播资源全部来源于网络，如有侵权，请联系删除！ </p>
+            <p>严重敬告：珍惜生命，请远离黄赌毒！</p>
             <p style="text-align: center;color: red">※※※【开通会员，扫码微信联系客服】※※※</p>
             <p style="text-align: center;">
                 <img src="/assets/img/weixin.jpg" width="100%">
